# klone

./: .gitignore  README.md  apply_2c1_query_provenance_fix.py  haaste.txt  pyproject.toml  tmp_smoke.sqlite
docs/: AGENT_PLAYBOOK.md  ARCHITECTURE.md  DATA_GOVERNANCE.md  DECISIONS.md  DIALOGUE_CORPUS_NEXT_AND_TRAINING_PLAN.md  HANDOFF_CURRENT.md  KLONE_AGENT_CONVENTIONS.md  KLONE_EXPANDED_VISION_ASSESSMENT_2026-04-01.md  KLONE_PARSER_AND_INTERFACE_ROADMAP_2026-04-01.md  LAYER_COHERENCE.md  NEXT_STEPS_ASSESSMENT_2026-03-28.md  PHASE_2A_HANDOFF.md  PHASE_2B_4_CLOSEOUT.md  POST_A1_3_NEXT_STEP_PROPOSAL.md  POST_A1_6_NEXT_STEP_PROPOSAL.md  POST_G1_1_NEXT_STEP_PROPOSAL.md  POST_G1_2_NEXT_STEP_PROPOSAL.md  POST_G1_4_NEXT_STEP_PROPOSAL.md  POST_V1_1_NEXT_STEP_PROPOSAL.md  POST_V1_2_NEXT_STEP_PROPOSAL.md  PROJECT_STATUS.md  REPO_REALITY_DEEP_DIVE_2026-03-28.md  ROADMAP.md  SUPERVISOR_CLOSEOUT_2C1.md
tests/: test_architecture_coherence.py  test_bedrock_b00_1.py  test_bedrock_b00_2.py  test_memory_phase_2b2.py  test_memory_phase_2b3.py  test_memory_phase_2b5.py  test_memory_phase_2c1.py  test_memory_phase_2c1_provenance.py  test_memory_phase_2c2.py  test_memory_phase_2c3.py  test_memory_phase_2c4.py  test_memory_phase_2c5.py  test_phase_2b_6.py  test_phase_2b_7.py  test_phase_2b_8.py  test_phase_2e_1.py  test_phase_a1_1.py  test_phase_a1_2.py  test_phase_a1_3.py  test_phase_a1_4.py  test_phase_a1_5.py  test_phase_a1_6.py  test_phase_a1_7.py  test_phase_a1_8.py  test_phase_a1_9.py  test_phase_g1_1.py  test_phase_g1_2.py  test_phase_g1_3.py  test_phase_g1_4.py  test_phase_g1_5.py  (+4 more)
(+36 files in other folders)
