[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klone"
version = "0.1.0"
description = "Modular local-first architecture for a personal clone system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.123.0,<1.0",
  "starlette>=0.49.1,<2.0",
  "uvicorn>=0.34,<1.0",
  "pillow>=11,<12",
]

[project.scripts]
klone = "klone.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
